--- a/Core.JwtBuilder/Core.JwtBuilder.csproj
+++ b/Core.JwtBuilder/Core.JwtBuilder.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
+	<PropertyGroup>
+		<Version>1.1.0</Version>
+	</PropertyGroup>
+
 </Project>
