--- a/SampleJwtBuilderAuthenticationApp/appsettings.json
+++ b/SampleJwtBuilderAuthenticationApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtConfig": {
+  "Jwt": {
     "Issuer": "https://localhost:7263",
     "Audience": "https://localhost:7263",
     "Key": "*****"
